native/macos/GhostShellGhostty.h

bool ghostshell_ghostty_initialize(void);
const char *ghostshell_ghostty_last_error(void);
// Return true to consume the physical key before libghostty receives it. The
// callback runs synchronously on the native UI thread and must return promptly.
typedef bool (*ghostshell_terminal_host_key_interceptor_v1)(
    void *userdata,
    const ghostshell_terminal_host_key_event_v1 *event);
// Return true only after the exact human attachment has synchronously reclaimed
// input authority. The callback runs on the native UI thread and must not wait
// on an asynchronous client or transport. Missing, failed, or false gates consume
// the physical input before libghostty receives it.
typedef bool (*ghostshell_terminal_physical_input_gate_v1)(
    void *userdata,
    const ghostshell_terminal_physical_input_event_v1 *event);
typedef struct {
    uint32_t struct_size;
    uint32_t version;
    const char *working_directory;
    const char *executable;
    const char *const *arguments;
    size_t argument_count;
    const ghostshell_environment_variable_v1 *environment;
    size_t environment_count;
    const ghostshell_terminal_render_profile_v1 *render_profile;
    // Fields below this point were added additively to options version 1.
    // Callers must set struct_size; the shim defaults fields that are absent.
    const char *const *terminal_keybindings;
    size_t terminal_keybinding_count;
    uint32_t terminal_keymap_present;
} ghostshell_terminal_options_v1;
typedef struct {
    uint32_t struct_size;
    uint32_t version;
    uint32_t rows;
    uint32_t columns;
    uint32_t cursor_row;
    uint32_t cursor_column;
    uint32_t alternate_screen;
    uint32_t bracketed_paste;
    uint32_t mouse_captured;
} ghostshell_terminal_screen_state_v1;
// The original entrypoint remains source and binary compatible for embedders
// that only need Ghostty's configured shell and a working directory.
void *ghostshell_terminal_attach(void *host_nsview, const char *working_directory);
void *ghostshell_terminal_attach_v1(
    void *host_nsview,
    const ghostshell_terminal_options_v1 *options);
bool ghostshell_terminal_confirm_close(void *terminal);
bool ghostshell_terminal_needs_close_confirmation(void *terminal);
bool ghostshell_terminal_reparent(void *terminal, void *host_nsview);
void ghostshell_terminal_detach_view(void *terminal);
void ghostshell_terminal_detach(void *terminal);
bool ghostshell_terminal_set_host_key_interceptor_v1(
    void *terminal,
    ghostshell_terminal_host_key_interceptor_v1 interceptor,
    void *userdata);
bool ghostshell_terminal_set_physical_input_gate_v1(
    void *terminal,
    ghostshell_terminal_physical_input_gate_v1 gate,
    void *userdata);
uint64_t ghostshell_terminal_input_epoch_v1(void *terminal);
void ghostshell_terminal_focus(void *terminal);
void ghostshell_terminal_resize(void *terminal, double width, double height, double scale);
bool ghostshell_terminal_resize_grid_v1(
    void *terminal,
    uint32_t columns,
    uint32_t rows);
void ghostshell_terminal_send_text(void *terminal, const char *utf8, size_t length);
bool ghostshell_terminal_send_text_at_epoch_v1(
    void *terminal,
    const char *utf8,
    size_t length,
    uint64_t expected_epoch);
// Sends a confirmed paste through libghostty's paste encoder. The caller owns
// unsafe-paste confirmation; libghostty owns newline filtering and bracketed mode.
void ghostshell_terminal_paste_text(void *terminal, const char *utf8, size_t length);
bool ghostshell_terminal_paste_text_at_epoch_v1(
    void *terminal,
    const char *utf8,
    size_t length,
    uint64_t expected_epoch);
// Sends a physical key through libghostty's live key encoder, preserving
// application-cursor/keypad and modifyOtherKeys/kitty-keyboard modes.
bool ghostshell_terminal_send_key(void *terminal, uint32_t key, uint32_t modifiers);
bool ghostshell_terminal_send_key_at_epoch_v1(
    void *terminal,
    uint32_t key,
    uint32_t modifiers,
    uint64_t expected_epoch);
// Sends one lowercase ASCII character chord through libghostty's live key
// encoder. This agent-only operation is deliberately unavailable without an
// input-authority epoch.
bool ghostshell_terminal_send_chord_at_epoch_v1(
    void *terminal,
    uint32_t character,
    uint32_t modifier,
    uint64_t expected_epoch);
// Coordinates are zero-based terminal cells. Returns false when the terminal
// has not captured mouse input or the request is outside the current grid.
bool ghostshell_terminal_send_mouse(
    void *terminal,
    uint32_t button,
    uint32_t event_kind,
    uint32_t column,
    uint32_t row,
    uint32_t modifiers);
bool ghostshell_terminal_send_mouse_at_epoch_v1(
    void *terminal,
    uint32_t button,
    uint32_t event_kind,
    uint32_t column,
    uint32_t row,
    uint32_t modifiers,
    uint64_t expected_epoch);
bool ghostshell_terminal_read_screen_state_v1(
    void *terminal,
    ghostshell_terminal_screen_state_v1 *state);
// Returns the required UTF-8 byte count. The buffer is NUL-terminated when capacity is nonzero.
size_t ghostshell_terminal_read_working_directory(void *terminal, char *buffer, size_t capacity);
// Returns the required UTF-8 byte count. The buffer is NUL-terminated when capacity is nonzero.
size_t ghostshell_terminal_read_screen(void *terminal, char *buffer, size_t capacity);
bool ghostshell_terminal_process_exited(void *terminal);